# dkgpg

./: .gitignore  .travis.yml  AUTHORS  BUGS  ChangeLog  Makefile.am  NEWS  README  THANKS  TODO  configure.ac
src/: .gitignore  Makefile.am  dkg-addrevoker.cc  dkg-adduid.cc  dkg-attest.cc  dkg-common.cc  dkg-common.hh  dkg-decrypt.1.in  dkg-decrypt.cc  dkg-encrypt.1.in  dkg-encrypt.cc  dkg-gencrs.cc  dkg-generate.1.in  dkg-generate.cc  dkg-gnunet-common.cc  dkg-gnunet-common.hh  dkg-io.cc  dkg-io.hh  dkg-keycheck.cc  dkg-keyinfo.cc  dkg-keysign.1.in  dkg-keysign.cc  dkg-openpgp.cc  dkg-openpgp.hh  dkg-refresh.cc  dkg-revoke.1.in  dkg-revoke.cc  dkg-revuid.cc  dkg-sign.1.in  dkg-sign.cc  dkg-tcpip-common.cc  dkg-tcpip-common.hh  dkg-timestamp-verify.cc  dkg-timestamp.cc  dkg-verify.1.in  dkg-verify.cc
tests/: .gitignore  Makefile.am
tools/: .gitignore  Makefile.am  dkg-fuzzer.cc  dkg-sop.cc
